--- a/runner_crd.yaml
+++ b/runner_crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: iberryful.com
+  name: runners.iberryful.com
 spec:
   group: iberryful.com
   version: v1
